--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -1,5 +1,5 @@
 // Version
-$version: '2.4.1';
+$version: '2.4.2';
 
 // Show the credits
 @import 'assets/credits';
